# weekend-agent

./: .env.example  .env.production  .gitignore  ENDPOINTS.md  README.md  capacitor.config.ts  expanded_test_scenarios.json  index.html  package-lock.json  package.json  pyproject.toml  tailwind.css  vite.config.ts
backend/: README.md  pyproject.toml
backend/local_explorer_agent/: __init__.py
backend/local_explorer_agent/app/: __init__.py  main.py
backend/local_explorer_agent/app/agent/: event_bus.py  orchestrator.py  plan_manager.py
backend/local_explorer_agent/app/api/: deps.py
backend/local_explorer_agent/app/core/: config.py  exceptions.py
backend/local_explorer_agent/app/data/: poi.intent_supplement.json  poi.json  poi.sample.json  queue_status.intent_supplement.json  queue_status.sample.json  route_edges.sample.json  user_profiles.sample.json  (+1 more)
backend/tests/: test_api_plans.py  test_conflict_detection.py  test_data_health.py  test_experience_planning.py  test_feedback_followup.py  test_health.py  test_interactive_planning.py  test_json_data_backend.py  test_json_prompt_runner_fallback.py  test_llm_client_mock.py  test_llm_decider.py  test_llm_integration_optional.py  test_mobile_api.py  test_negotiation.py  test_openai_agent_e2e_optional.py  test_openai_client_config.py  test_orchestrator.py  test_poi_query_tool.py  test_preview_with_mock_llm.py  test_react_agent.py  test_react_refactor_contract.py  test_react_runtime.py  test_react_validation.py  test_requirement_intake.py  test_timeline_builder.py  test_user_memory.py  test_user_understanding.py
(+322 files in other folders)
